Пофикшены ошибки, сделан наполовину модуль mes

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>{{#if title}}{{title}} — EKIAS{{else}}EKIAS{{/if}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
+
 <body>
 <div class="app">
     <aside class="sidebar">
@@ -13,7 +16,7 @@
     </aside>
 
     <main class="content">
-        {{{body}}}
+{{{body}}}
     </main>
 </div>
 </body>
